# log-analyzer

./: .gitignore  .vercelignore  CLAUDE.md  REQUISITOS.md  analyzer.py  app.py  bot_detector.py  csv_export.py  parser.py
rust_parser/: .gitignore  Cargo.toml  activate-env.sh  setup-env.sh
rust_parser/src/: aggregator.rs  bot_detector.rs  file_reader.rs  lib.rs  main.rs  output.rs  parser.rs  wasm.rs
static/: style.css
templates/: base.html  bots.html  crawl_frequency.html  dashboard.html  ips.html  status_codes.html  upload.html  urls_detail.html
web/: index.html  package.json  parser-worker.js  script.js  style.css
