[package]
name = "log_parser"
version = "0.1.0"
edition = "2021"
description = "High-performance log parser with parallel processing and bot detection"

[dependencies]
rayon = "1.8"
regex = "1.10"
memmap2 = "0.9"
ipnetwork = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
