[package]
name = "log_parser"
version = "0.1.0"
edition = "2021"
description = "High-performance log parser with parallel processing and bot detection"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.10"
ipnetwork = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

# CLI only
rayon = { version = "1.8", optional = true }
memmap2 = { version = "0.9", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }

# WASM only
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["cli"]
cli = ["rayon", "memmap2", "clap"]
wasm = ["wasm-bindgen"]

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
